hphp/test/zend/good/ext/standard/tests/file/fnmatch_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('fnmatch'))
    die("skip fnmatch() function is not available");
}
