hphp/test/zend/bad/ext/gd/tests/imagecopyresampled_basic.php.skipif
<?php 
	if (!function_exists('imagecopyresampled')) die('skip imagecopyresampled() not available'); 
	if (!(imagetype() & IMG_PNG)) die('skip PNG Support is not enabled');
?>